ROL-1110: Compact display for entry management page to avoid layout problems
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/roller/trunk@395407 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/theme/roller.css
+++ b/web/theme/roller.css
@@ -319,10 +319,10 @@ td.pendingcomment {
     background: #ffcccc;
     border: 1px grey solid;
 }
-td.pendingentry {
+td.pendingentry, tr.pendingentry {
     background: #ffcccc;
 }
-td.draftentry {
+td.draftentry, tr.draftentry {
     background: #ffffcc;
 }
 .draftEntryBox {
